# RadarQT

./: .gitignore  CMakeLists.txt  README.md  build_receiver.bat  build_sender.bat  test_udp.cpp  test_udp.pro
TelemetryReceiver/: CMakeLists.txt  TelemetryReceiver.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  radarwidget.cpp  radarwidget.h  reliableudp.cpp  reliableudp.h  telemetryreceiversocket.cpp  telemetryreceiversocket.h
TelemetrySender/: CMakeLists.txt  TelemetrySender.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
